--- a/src/styles/tink/_tables.scss
+++ b/src/styles/tink/_tables.scss
@@ -101,7 +101,7 @@ table {
 
 // Default zebra-stripe styles (alternating gray and transparent backgrounds)
 .table-striped {
-  > tbody > tr:nth-child(odd) {
+  > tbody > tr:nth-child(even) {
     > td,
     > th {
       background-color: $table-bg-accent;
